@tschatzl's latest fix, cleanup and a test that checks unaligned heap problem